# bujo-cli-rs

./: .gitignore  Cargo.toml  README.md
src/: config.rs  main.rs  models.rs  storage.rs
src/ui/: app.rs  collections.rs  components.rs  daily.rs  future.rs  mod.rs  monthly.rs  search.rs
