[package]
name = "bujo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bujo"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }